# contractaccess

./: Makefile  README.md  note
contract/: Cargo.toml
contract/src/: another.rs  authorized_contract.rs  main.rs  other.rs  unauthorized_contract.rs
