[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "unauthorized_contract"
path = "src/unauthorized_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "authorized_contract"
path = "src/authorized_contract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

